--- a/internetdefense/templates/reach.html
+++ b/internetdefense/templates/reach.html
@@ -1,5 +1,5 @@
-{% load reach %}
-
-<div id="reach">
-    {% reach %}
-</div>
+{% if reach %}
+    <div id="reach">
+        <meter min="0" max="350000" value="85055">{{ reach }}</meter>
+    </div>
+{% endif %}
