--- a/internetdefense/static/css/src/include.css
+++ b/internetdefense/static/css/src/include.css
@@ -7,25 +7,32 @@
     }
 
 html.idl_banner{
-    padding-top: 52px;
+    padding-top: 90px;
 }
 
 html.idl_banner #idl_alert{
     width: 100%;
-    height: 52px;
+    height: 90px;
     top: 0;
     left: 0;
     -webkit-box-shadow: 0 -1px 4px 0 #000;
     box-shadow: 0 -1px 4px 0 #000;
 }
+html.idl_banner #idl_close{
+    display: none;
+}
 
 html.idl_modal #idl_alert{
-    width: 400px;
-    height: 280px;
+    width: 600px;
+    height: 400px;
     top: 50%;
     left: 50%;
-    margin: -145px 0 0 -188px;
+    margin: -200px 0 0 -300px;
     z-index: 2147483647;
+    background: #FFF;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
 }
 
 #idl_backdrop{
@@ -35,110 +42,39 @@ html.idl_modal #idl_alert{
     top: 0;
     left: 0;
     z-index: 2147483646;
-    background: #31588D;
-    background: -moz-linear-gradient(top,  rgba(49,88,141, 0.85) 85%, rgba(27,53,88, 0.85) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(85%,rgba(49,88,141, 0.85)), color-stop(100%,rgba(27,53,88, 0.85)));
-    background: -webkit-linear-gradient(top,  rgba(49,88,141, 0.85) 85%,rgba(27,53,88, 0.85) 100%);
-    background: -o-linear-gradient(top,  rgba(49,88,141, 0.85) 85%,rgba(27,53,88, 0.85) 100%);
-    background: -ms-linear-gradient(top,  rgba(49,88,141, 0.85) 85%,rgba(27,53,88, 0.85) 100%);
-    background: linear-gradient(to bottom,  rgba(49,88,141, 0.85) 85%,rgba(27,53,88, 0.85) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31588d', endColorstr='#1b3558',GradientType=0 );
+    background: #000;
+    opacity: 0.75;
 }
     .idl_ie_quirks #idl_backdrop{
         position: absolute;
     }
-
-
-#idl_city{
-    position: fixed;
-    width: 100%;
-    height: 214px;
-    bottom: 0;
-    left: 0;
-    background: url('{{ SECURE_STATIC_URL }}img/idl_launch/city.png') no-repeat bottom;
-    z-index: 2147483646;
-}
-    .idl_ie_quirks #idl_city{
-        position: absolute;
+    html.idl_banner #idl_backdrop{
+        display: none;
     }
 
-#idl_cat{
-    position: fixed;
-    width: 758px;
-    height: 473px;
-    top: 50%;
-    left: 50%;
-    margin: -237px 0 0 -379px;
-    background: url('{{ SECURE_STATIC_URL }}img/idl_launch/catface.png') no-repeat bottom;
-    z-index: 2147483646;
-}
-    .idl_ie_quirks #idl_cat{
-        position: absolute;
-    }
 
 #idl_close{
     position: fixed;
     top: 50%;
     left: 50%;
-    margin: 185px 0 0 -64px;
+    margin: -190px 0 0 269px;
     z-index: 2147483647;
-    color: #5C5C5C;
-    width: 150px;
-    height: 20px;
+    width: 20px;
+    height: 1px;
     display: block;
     font: bold 11px/1 'Helvetica Neue', 'Helvetica', sans-serif;
-    text-align: center;
-    text-decoration: none;
+    overflow: hidden;
+    text-indent: 999em;
+    padding-top: 19px;
 }
     .idl_ie_quirks #idl_close{
         position: absolute;
     }
-    #idl_close:before{
-        content: '\\D7\\A0\\A0';
-        font-size: 14px;
-    }
-
-@media (max-width: 840px){
-    html.idl_banner{
-        padding-top: 83px;
-    }
-    html.idl_banner #idl_alert{
-        height: 83px;
-    }
-}
-
-@media (max-width: 480px){
-    html.idl_banner{
-        padding-top: 110px;
-    }
-    html.idl_banner #idl_alert{
-        height: 110px;
+    #idl_close:after{
+        content: '\\D7';
+        color: #FFF;
         position: absolute;
+        top: -4px;
+        right: 2px;
+        font-size: 24px;
     }
-}
-
-@media (max-width: 800px) and (max-height: 800px){
-    html.idl_modal #idl_close{
-        top: auto;
-        bottom: 15px;
-        margin-top: 0;
-        margin-left: -75px;
-    }
-    html.idl_modal #idl_alert{
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        margin: 0;
-        background: #FFF;
-    }
-    html.idl_modal.idl_mobile{
-
-    }
-    html.idl_modal #idl_backdrop,
-    html.idl_modal #idl_city,
-    html.idl_modal #idl_cat{
-        display: none;
-    }
-}
