--- a/internetdefense/templates/reach.html
+++ b/internetdefense/templates/reach.html
@@ -1,5 +1,10 @@
 {% if reach %}
-    <div id="reach">
-        <meter min="0" max="350000" value="85055">{{ reach }}</meter>
+    <div id="progress">
+        <div id="reach">
+            <div class="meter" style="width:{{ progress }}%">
+                <span class="tooltip">{{ reach }} people reached daily</span>
+            </div>
+        </div>
+        <p class="goal">Goal: 350,000 people</p>
     </div>
 {% endif %}
