Adds screenshots, updates modal text

--- a/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
@@ -13,7 +13,7 @@
     </head>
     <body{% if session.country_code == 'US' %} class="us"{% endif %}>
         <h1>{% trans "On Dec 3rd" %} <strong>{% trans "Stop the Internet Coup" %}</strong></h1>
-        <p>Only governments get a vote at WCIT, so we need people from all around the world to demand that our leaders keep the internet open.</p>
+        <p>Right now, the world&#39;s governments are deciding whether to give a secretive, top-down institution called the ITU control over the Internet. Tell them it&#39;s a bad idea. <a href="http://www.internetcoup.org/" target="_blank">Learn more</a>.</p>
         <form action="https://nt.salsalabs.com/save" id="action" class="fftf">
             <input type="hidden" name="object" value="supporter"/>
             <input type="hidden" name="tag" value="dictatorshipday"/>
