Ensures that there's good behavior if the country could not be detected

--- a/internetdefense/apps/campaigns/static/campaigns/itu/modal/modal.css
+++ b/internetdefense/apps/campaigns/static/campaigns/itu/modal/modal.css
@@ -186,3 +186,24 @@ p{
     line-height: 1.25;
     padding: 20px 32px;
 }
+
+.nocountry #email-row{
+    float: left;
+    width: 262px;
+}
+.nocountry #id_email{
+    width: 252px;
+}
+.nocountry #country-row{
+    float: left;
+    width: 223px;
+    padding-left: 0;
+    padding-right: 0;
+}
+.nocountry #id_phone{
+    float: left;
+    width: 192px;
+}
+.nocountry .row p{
+    padding-top: 0;
+}
