--- a/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
@@ -2,7 +2,13 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]> <html class="ie6"> <![endif]-->
+<!--[if IE 7]> <html class="ie7">  <![endif]-->
+<!--[if IE 8]> <html class="ie8">  <![endif]-->
+<!--[if IE 9]> <html class="ie9">  <![endif]-->
+<!--[if gt IE 9]><!-->
+<html> 
+<!--<![endif]-->
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,6 +66,7 @@
             </div>
         </form>
         <script src="{% static 'campaigns/itu/modal/jquery.js' %}" type="text/javascript"></script>
+        <script src="{% static 'campaigns/itu/modal/placeholder.js' %}" type="text/javascript"></script>
         <script>
             window.responderMap = {
                 'AF': '22',
