Updates text on ITU widget

--- a/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/itu/modal.html
@@ -18,7 +18,7 @@
         <link href="{% static 'campaigns/itu/modal/modal.css' %}" rel="stylesheet" type="text/css" />
     </head>
     <body{% if session.country_code == 'US' %} class="us"{% endif %}{% if not session.country_code %} class="nocountry"{% endif %}>
-        <h1>{% trans "On Dec 3rd" %} <strong>{% trans "Stop the Internet Coup" %}</strong></h1>
+        <h1>{% trans "This Week" %} <strong>{% trans "Stop the Internet Coup" %}</strong></h1>
         <p>Right now, the world&#39;s governments are deciding whether to give a secretive, top-down institution called the ITU control over the Internet. Tell them it&#39;s a bad idea. <a href="http://www.internetcoup.org/" target="_blank">Learn more</a>.</p>
         <form action="https://nt.salsalabs.com/save" id="action" class="fftf">
             <input type="hidden" name="object" value="supporter"/>
