--- a/internetdefense/apps/campaigns/templates/campaigns/itu/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/itu/banner.html
@@ -20,7 +20,7 @@
     <body{% if session.country_code == 'US' %} class="us"{% endif %}{% if not session.country_code %} class="nocountry"{% endif %}>
         <div class="header">
             <h1>{% trans "This Week:" %} <strong>{% trans "Stop the Internet Coup" %}</strong></h1>
-            <p>{% trans "The world's governments are deciding whether to give the a secretive, top-down institution called the ITU control over the Internet. Tell them it's a bad idea." %} <a href="http://internetcoup.org" target="page">{% trans "Learn more" %}</a></p>
+            <p>{% blocktrans %}They're meeting right now. Contact your leaders! Tell them: "I don't trust the world's governments to run the global Internet. Don't give the ITU any more power."{% endblocktrans %} <a href="http://internetcoup.org" target="page">{% trans "Learn more" %}</a></p>
         </div>
         <form action="https://nt.salsalabs.com/save" id="action" class="fftf">
             <input type="hidden" name="object" value="supporter"/>
