--- a/internetdefense/apps/campaigns/templates/campaigns/cispa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/cispa/banner.html
@@ -37,9 +37,10 @@
                 </div>
                 <div class="field">
                     {% comment %}Translators: Email button text (use verb){% endcomment %}
-                    <button type="submit" class="bebas btn" id="button_email">{% trans "Defend Privacy. Stop CISPA." %}</button>
+                    <button type="submit" class="bebas btn" id="button_email">{% trans "Tell Congress to Defend Privacy" %}</button>
                 </div>
             </form>
+            <p id="international">Not in the United States? <a href="#" target="_top">Take action here instead</a>.</p>
         </div>
     </body>
 </html>
