--- a/internetdefense/apps/campaigns/static/campaigns/cispa/banner/banner.css
+++ b/internetdefense/apps/campaigns/static/campaigns/cispa/banner/banner.css
@@ -6,7 +6,7 @@
 }
 
 html{
-    background: url(bg.png) bottom;
+    background-image: url(bg.png);
     height: 90px;
 }
 
@@ -17,6 +17,10 @@ body{
     font: 12px/1.33 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
+a {
+    color: #21e18d;
+}
+
 #left {
     float: left;
     width: 200px;
@@ -25,7 +29,13 @@ body{
     padding: 0 0 0 175px;
 }
 
-#left h1 {
+#right {
+    float: left;
+    width: 640px;
+    min-height: 90px;
+}
+
+h1 {
     color: #FFFFFF;
     font-family: 'Russo One';
     font-size: 44px;
@@ -34,20 +44,13 @@ body{
     line-height: 100%;
 }
 
-#left h1 .hidden {
+h1 .hidden {
     display: none;
 }
 
-#right {
-    float: left;
+h2 {
     width: 640px;
-    min-height: 90px;
-}
-
-#right h2 {
-    width: 640px;
-    height: 25px;
-    margin-top: 5px;
+    margin: 5px 0;
     text-align: center;
     color: #EAC704;
     font-family: 'Russo One';
@@ -56,13 +59,18 @@ body{
     text-shadow: 1px 1px 0 #333333;
 }
 
-#right form {
+form {
     width: 640px;
-    height: 40px;
-    margin-top: 10px;
-    float: left;
     display: block;
     text-align: center;
+}
+
+p#international {
+    line-height: 100%;
+    color: #ffffff;
+    text-align: center;
+    font-size: 13px;
+    margin-top: 5px;
 }
 
 input[type="text"]{
@@ -104,7 +112,6 @@ button{
     background: #14a767;
     border: 0;
     color: #FFF;
-    height: 40px;
     padding: 0px 10px 0;
     background: -moz-linear-gradient(top, #14a767 0%, #09834e 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#14a767), color-stop(100%,#09834e));
@@ -113,7 +120,7 @@ button{
     background: -ms-linear-gradient(top, #14a767 0%,#09834e 100%);
     background: linear-gradient(top, #14a767 0%,#09834e 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#14a767', endColorstr='#09834e',GradientType=0 );
-    font: 22px/1.72 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font: 20px/1.72 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
@@ -123,10 +130,4 @@ button{
     margin-right: 4px;
     position: relative;
     top: 3px;
-}
-
-p{
-    font-size: 12px;
-    color: #b8b8b8;
-    padding-top: 6px;
 }
