updated cispa text. made form go to correct salsa action.

--- a/internetdefense/apps/campaigns/templates/campaigns/cispa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/cispa/banner.html
@@ -23,8 +23,9 @@
         </div>
 
         <div id="right">
-            <h2>Dangerous Cybersecurity Law Threatens Online Privacy</h2>
-            <form action="https://nt.salsalabs.com/save" id="action" class="fftf">
+            <h2>This bill sacrifices privacy without improving security. We deserve both.</h2>
+            <form action="https://action.eff.org/o/9042/p/dia/action/public/" method="get" target="_top">
+                <input type="hidden" name="action_KEY" value="9048" />
                 {% comment %}
                 We're going to let JavaScript fill these in, (1) because we know 
                 the user will have JavaScript enabled (or else the embed code 
@@ -40,7 +41,7 @@
                     <button type="submit" class="bebas btn" id="button_email">{% trans "Tell Congress to Defend Privacy" %}</button>
                 </div>
             </form>
-            <p id="international">Not in the United States? <a href="#" target="_top">Take action here instead</a>.</p>
+            <p id="international">Not in the United States? <a href="https://action.eff.org/o/9042/p/dia/action/public/?action_KEY=9137" target="_top">Take action here instead</a>.</p>
         </div>
     </body>
 </html>
