--- a/internetdefense/apps/campaigns/templates/campaigns/cispa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/cispa/modal.html
@@ -22,10 +22,11 @@
             <h1><span class="hidden">CISPA</span> is Back.</h1>
         </div>
         
-        <h2>This bill would give the FBI and NSA access to your private data.</h2>
+        <h2>This bill sacrifices privacy without improving security. We deserve both.</h2>
 
         <div id="content">
-            <form action="https://nt.salsalabs.com/save" id="action" class="fftf">
+            <form action="https://action.eff.org/o/9042/p/dia/action/public/" method="get" target="_top">
+                <input type="hidden" name="action_KEY" value="9048" />
                 {% comment %}
                 We're going to let JavaScript fill these in, (1) because we know 
                 the user will have JavaScript enabled (or else the embed code 
@@ -42,6 +43,6 @@
                 </div>
             </form>
         </div>
-        <p id="international">Not in the United States? <a href="#" target="_top">Take action here instead</a>.</p>
+        <p id="international">Not in the United States? <a href="https://action.eff.org/o/9042/p/dia/action/public/?action_KEY=9137" target="_top">Take action here instead</a>.</p>
     </body>
 </html>
