--- a/internetdefense/apps/campaigns/static/campaigns/cispa/modal/modal.css
+++ b/internetdefense/apps/campaigns/static/campaigns/cispa/modal/modal.css
@@ -55,6 +55,8 @@ p#international {
     color: #ffffff;
     text-align: center;
     font-size: 16px;
+    width: 560px;
+    padding: 0 20px;
 }
 
 a {
