--- a/internetdefense/apps/campaigns/static/campaigns/cispa/modal/modal.css
+++ b/internetdefense/apps/campaigns/static/campaigns/cispa/modal/modal.css
@@ -54,9 +54,10 @@ p#international {
     line-height: 100%;
     color: #ffffff;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
     width: 560px;
     padding: 0 20px;
+	margin-top: -5px;
 }
 
 a {
@@ -144,3 +145,6 @@ input.error{
     input.error:-ms-input-placeholder {
         color: red;
     }
+
+
+#idl_alert {height: 1000px; padding-bottom: 100px;}
