--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -5,9 +5,9 @@
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
         <h2 class="montserrat">Join our campaigns for Internet freedom!</h2>
-
+        <p class="update"><strong>UPDATE!</strong> The Cat Signal is launching Tuesday, March 19th to sound the alarm about CISPA, the bill that could END privacy. <a href="http://www.cispaisback.org">Learn more here</a>. Get the code below to take part. Contact us with any questions: <a href="mailto:team@fightforthefuture.org">team@fightforthefuture.org</a></p>
         <div class="indent dark large">
-            <h3 class="montserrat">Get the code for your site. <a href="https://github.com/fightforthefuture/internet_defense_league">GitHub</a></h3>
+            <h3 class="montserrat">Get the code for your site:</h3>
             <textarea name="output" readonly>{% include "include.html" %}</textarea>
         </div>
 
@@ -41,7 +41,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for ITU</label>
+                        <label for="single" class="montserrat">Just for CISPA</label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
@@ -107,6 +107,8 @@
         <div class="column">
             <h3>Are you a developer?</h3>
             <p>Join the project to build the flexible JavaScript tools that make the Defense League tick.</p>
+            
+            
             <ul class="footer-nav">
                 <li><a href="https://github.com/fightforthefuture/internet_defense_league" class="dev"><img src="{{ SECURE_STATIC_URL }}img/idl_resources/github.png" alt="GitHub"> <span>GITHUB</span></a></li>
                 <li><a href="https://groups.google.com/forum/?fromgroups#!forum/internetdefenseleague" class="dev"><img src="{{ SECURE_STATIC_URL }}img/idl_resources/google.png" alt="Google Group"><span>GOOGLE GROUP</span></a></li>
