adding sites to reach, not sure if this will work

--- a/internetdefense/templates/reach.html
+++ b/internetdefense/templates/reach.html
@@ -3,6 +3,8 @@
         <div id="reach">
             <div class="meter" style="width:{{ progress }}%">
                 <span class="tooltip">{{ reach }} people reached daily</span>
+                <br />
+                <span class="tooltip">{{ sites|default:"0" }} sites embedding (I think, maybe)</span>
             </div>
         </div>
         <p class="goal">Goal: 350,000 people</p>
