instructions on installing the codez

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -58,6 +58,17 @@
 
 </div>
 
+
+
+        <div class="update" style="width: 900px; margin: 0 auto; padding-top: 30px;">
+        <h2 id="instructions">Instructions</h2>
+        <p style="margin-bottom: 10px; margin-top: 10px;"><strong>Tumblr</strong>: Go to your settings by clicking the gear on the toolbar at the top of your Tumblr feed, then hit the 'customize' button under the 'Theme' section. Once on the customization page, click the "edit HTML" button. Scroll through the HTML code looking for the '<body>' tag. Once you find it, paste the code right beneath it, click "update preview" at the top of the code, and then click "save".
+</p>
+        <p style="margin-bottom: 10px; margin-top: 10px;"><strong>Self-hosted WordPress.org blogs/pages:</strong> Open up ‘footer.php’ and paste the code beneath the <body> tag. </p>
+        </div>
+
+
+
 						    	<div id="badges" style="margin-left: -40px; float: left; overflow: auto;"><div class="thanks" style="font-family: 'Montserrat', sans-serif; text-align: center; margin-top: 60px; padding-left: 50px;">
 										<h2 style="width: 620px; margin: 0 auto 20px; font-size: 18pt;">Tell the world that you are a member of the league</h2>
 						      	</div>
