open links in parent window, adjustments for sizes of modal, lose the margins on banner

--- a/internetdefense/apps/campaigns/static/campaigns/cispa/banner/banner.css
+++ b/internetdefense/apps/campaigns/static/campaigns/cispa/banner/banner.css
@@ -8,9 +8,13 @@
 html{
     background-image: url(bg.png);
     height: 90px;
+	margin: 0;
+	padding: 0;
 }
 
 body{
+	margin: 0;
+	padding: 0;
     height: 90px;
     margin: 0 auto;
     width: 1015px;
