--- a/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/banner.html
@@ -22,7 +22,7 @@
 			<div id="dp_aarons_law_banner" class="banner-container">
 				<div class="content">
 					<div class="banner-aaron">
-						<a href="http://fixthecfaa.com"><img src="{% static 'campaigns/fixthecfaa/banner/banner-aaron.png' %}" alt="Aaron Swartz"></a>
+						<a href="http://fixthecfaa.com"><img src="{% static 'campaigns/fixthecfaa/banner/banner-aaron.png' %}" alt="Aaron Swartz" target="_parent"></a>
 					</div>
 					<form class="banner-form" action="http://act.demandprogress.org/act/" method="post" target="_top">
 						<input type="hidden" name="utf8" value="✔">
@@ -30,7 +30,7 @@
 						<input type="hidden" name="action_referer" value="" id="id_referer">
 						<input type="hidden" name="lists" value="1">
 						<p>
-							Show your support for "Aaron's Law" and demand inquiry into his prosecution! <a href="http://www.fixthecfaa.com">[More info]</a>
+							Show your support for "Aaron's Law" and demand inquiry into his prosecution! <a href="http://www.fixthecfaa.com" target="_parent">[More info]</a>
 						</p>
 						<div class="dp-right">
 							<div class="dp-line">
@@ -41,7 +41,7 @@
 								<input id="id_address1" type="text" placeholder="Address" value="Address" name="address1" required="">
 								<input id="id_zip" type="text" name="zip" placeholder="Zip Code" value="Zip Code" required="">
 							</div>
-							<input type="hidden" value="Subject: Cosponsor Aaron's LawPlease cosponsor Aaron's Law -- the reform of the Computer Fraud and Abuse Act that's being introduced by Senator Wyden and Representative Lofgren. It is overly broad and ineffectual. Let's make sure that what happened to Aaron Swartz never happens to anybody ever again." name="aciton_comment"> <input type="image" src="{% static 'campaigns/fixthecfaa/banner/banner-submit.png' %}" class="dp-form-submit"> <a href="http://internetdefenseleague.org/" title="Internet Defense League"><img src="{% static 'campaigns/fixthecfaa/banner/cat_face_white_40_50.png' %}" border="0" class="cat"></a>
+							<input type="hidden" value="Subject: Cosponsor Aaron's LawPlease cosponsor Aaron's Law -- the reform of the Computer Fraud and Abuse Act that's being introduced by Senator Wyden and Representative Lofgren. It is overly broad and ineffectual. Let's make sure that what happened to Aaron Swartz never happens to anybody ever again." name="aciton_comment"> <input type="image" src="{% static 'campaigns/fixthecfaa/banner/banner-submit.png' %}" class="dp-form-submit"> <a href="http://internetdefenseleague.org/" title="Internet Defense League" target="_parent"><img src="{% static 'campaigns/fixthecfaa/banner/cat_face_white_40_50.png' %}" border="0" class="cat"></a>
 						</div>
 					</form>
 				</div>
