--- a/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/modal.html
@@ -25,7 +25,7 @@
 			<img class="aaron" src="{% static 'campaigns/fixthecfaa/modal/modal-aaron.png' %}" alt="Aaron Swartz">
 			<div class="content-left">
 				<p>
-					Internet activist Aaron Swartz helped build many of the web technologies many of us rely on every day, and he didn't do it to enrich himself. But the U.S. government literally scared him to death by threatening him with 35 years in prison--just for engaging in civil disobedience for the open information movement. Aaron committed suicide last month, but let's not let his death be in vain. <a href="http://www.fixthecfaa.com">[Read more]</a>
+					Internet activist Aaron Swartz helped build many of the web technologies many of us rely on every day, and he didn't do it to enrich himself. But the U.S. government literally scared him to death by threatening him with 35 years in prison--just for engaging in civil disobedience for the open information movement. Aaron committed suicide last month, but let's not let his death be in vain. <a href="http://www.fixthecfaa.com" target="_parent">[Read more]</a>
 				</p>
 				<p class="large">
 					<strong>Tell Congress to reform the CFAA</strong>, a law which makes criminals out of practically all of us. <strong>Demand Justice for Aaron and Help Reign In Out-Of-Control Prosecutors!</strong>
@@ -45,11 +45,11 @@
 				<input type="hidden" value="Subject: Cosponsor Aaron's LawPlease cosponsor Aaron's Law -- the reform of the Computer Fraud and Abuse Act that's being introduced by Senator Wyden and Representative Lofgren. It is overly broad and ineffectual. Let's make sure that what happened to Aaron Swartz never happens to anybody ever again." name="aciton_comment">
 			</form>
 			<div class="notice">
-				This campaign is a collaboration between <a href="http://DemandProgress.org">demand progress</a> and <a href="http://internetdefenseleague.org/">internet defense league</a>.<br>
+				This campaign is a collaboration between <a href="http://DemandProgress.org" target="_parent">demand progress</a> and <a href="http://internetdefenseleague.org/" target="_parent">internet defense league</a>.<br>
 				They will be in touch...
 			</div>
 			<div class="idl">
-				<a href="http://internetdefenseleague.org/"><img src="{% static 'campaigns/fixthecfaa/modal/cat_face_90_50.png' %}" border="0"></a>
+				<a href="http://internetdefenseleague.org/" target="_parent"><img src="{% static 'campaigns/fixthecfaa/modal/cat_face_90_50.png' %}" border="0"></a>
 			</div>
 			<div class="social"></div>
 			<div class="clear"></div>
