adjustments to make the modal and banner look slightly better

--- a/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/banner/banner.css
+++ b/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/banner/banner.css
@@ -1,6 +1,8 @@
 #dp_aarons_law_banner_wrap {
 	position: absolute;
   width:100%;
+  margin: -8px;
+  padding: 9px;
 }
 #dp_aarons_law_banner {
 	font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
