--- a/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/modal/modal.css
+++ b/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/modal/modal.css
@@ -1,3 +1,5 @@
+html.idl_modal #id_alert {height: 10000px;}
+
 #dp_aarons_law_modal {
 	font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	width: 620px;
