banner display problem, now fixed

--- a/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/banner/banner.css
+++ b/internetdefense/apps/campaigns/static/campaigns/fixthecfaa/banner/banner.css
@@ -1,8 +1,18 @@
+html{
+    background-image: url(bg.png);
+    height: 90px;
+	margin: 0;
+	padding: 0;
+}
+
+body{
+	margin: 0;
+	padding: 0;
+}
+
 #dp_aarons_law_banner_wrap {
 	position: absolute;
   width:100%;
-  margin: -8px;
-  padding: 9px;
 }
 #dp_aarons_law_banner {
 	font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
@@ -10,7 +20,9 @@
 	width: 100%;
 	overflow: hidden;
 	background: #000;
+	padding-bottom: 2px;
 }
+
 #dp_aarons_law_banner .content {
 	width: 870px;
 	margin: 0 auto; 
