--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -5,7 +5,7 @@
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
         <h2 class="montserrat">Join our campaigns for Internet freedom!</h2>
-        <p class="update"><strong>UPDATE!</strong> The Cat Signal is launching Tuesday, March 19th to sound the alarm about CISPA, the bill that could END privacy. <a href="http://www.cispaisback.org">Learn more here</a>. Get the code below to take part. <a href="mailto:team@fightforthefuture.org">Contact us with any questions</a></p>
+        
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
             <textarea name="output" readonly>{% include "include.html" %}</textarea>
@@ -41,7 +41,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for CISPA</label>
+                        <label for="single" class="montserrat">Just for <a href="http://www.fixthecfaa.com/">Fix the CFAA</a></label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
