--- a/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/fixthecfaa/banner.html
@@ -22,7 +22,7 @@
 			<div id="dp_aarons_law_banner" class="banner-container">
 				<div class="content">
 					<div class="banner-aaron">
-						<a href="http://fixthecfaa.com"><img src="{% static 'campaigns/fixthecfaa/banner/banner-aaron.png' %}" alt="Aaron Swartz" target="_parent"></a>
+						<a href="http://fixthecfaa.com" target="_parent"><img src="{% static 'campaigns/fixthecfaa/banner/banner-aaron.png' %}" alt="Aaron Swartz"></a>
 					</div>
 					<form class="banner-form" action="http://act.demandprogress.org/act/" method="post" target="_top">
 						<input type="hidden" name="utf8" value="✔">
