--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -66,7 +66,7 @@
             
             <p style="margin-bottom: 10px;font-size: 14px; line-height: 1.5;"><strong>Tumblr</strong>: Go to your settings by clicking the gear on the toolbar at the top of your Tumblr feed, then hit the 'customize' button under the 'Theme' section. Once on the customization page, click the "edit HTML" button. Scroll through the HTML code looking for the '&lt;body&gt;' tag. Once you find it, paste the code right beneath it, click "update preview" at the top of the code, and then click "save".
 </p>
-        <p style="margin-bottom: 10px; margin-top: 10px;font-size: 14px; line-height: 1.5;"><strong>Self-hosted WordPress.org blogs/pages:</strong> Open up ‘footer.php’ and paste the code beneath the &lt;body&gt; tag. </p>
+        <p style="margin-bottom: 10px; margin-top: 10px;font-size: 14px; line-height: 1.5;"><strong>Self-hosted WordPress.org blogs/pages:</strong> Open up ‘footer.php’ and paste the code above the &lt;body&gt; tag. </p>
         </div>
 
 
