Updated with new image at bottom and typo corrections

--- a/internetdefense/templates/dinesh/modal.html
+++ b/internetdefense/templates/dinesh/modal.html
@@ -19,7 +19,9 @@
     .adv-footer{font-size:11px; background: url(http://dev.thinkoverit.com/demos/images/bg_amendment_fight.png) left center no-repeat; line-height:19px; display:inline-block; padding-left:25px;}
     .adv-footer a{color:#53accb;}
     .close_btn{position:absolute; top:0px;right:5px; text-indent:-9999px; display:block;background:transparent url(http://dev.thinkoverit.com/demos/images/close-btn.png) left top no-repeat;width:15px; height:15px;}
+    .adv-details{position:relative;}
     .adv-details img{vertical-align:middle;}
+    .adv-link {position:absolute; display:block;text-align:right; right:10px; top:-20px;}
   </style>
  </head>
   <body>
@@ -27,8 +29,7 @@
   <div class="adv">
     <a href="#" class="close_btn"> Close</a>
     <div class="adv-combine">
-     <h1 class="adv-heading">This 4th of July,we stand by the 4th Amendment , and against the U.S. government's 
-       spying on Internet users without probable cause. Do you?
+     <h1 class="adv-heading">This 4th of July, we stand by the 4th Amendment and against the U.S. government's unconstitutional surveillance of Internet users.
      </h1>
      <div class="adv-subscribe">
       <form class="adv-form">
@@ -40,8 +41,10 @@
      <p class="adv-footer"><a href="#">Fight for the future</a>&nbsp;will contact you about related campaigns&nbsp;<a href="#">Privacy Policy</a></p>
     </div>
     <div class="adv-details">
+     <a href="http://RestoreTheFourth.net" target="_blank" class="adv-link"><img width="60" src="http://dev.thinkoverit.com/demos/images/rPaxDfi.png" alt="RestoreTheFourth"/></a>
      <img src="http://dev.thinkoverit.com/demos/images/amendment.jpg" alt="The 4th Amendment"/>
     </div>
+    
     </div>
    </section>
   </body>
