Resolve tree for NSA campaign

--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -9,16 +9,14 @@
 <!--[if gt IE 9]><!-->
 <html> 
 <!--<![endif]-->
-  <head>
-      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      {% comment %}Translators: Page Title{% endcomment %}
-      <title>{% trans "America has violated its founding principles." %}</title>
-      <link href="{% static 'campaigns/nsa/modal/banner.css' %}" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="nsa_modal">
-      Test Modal
-    </div>
-  </body>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link href="{% static 'css/src/reset.css' %}" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+      <div id="nsa_modal">
+        <img src="{% static 'campaigns/nsa/modal/modal.jpg' %}" border="0" class="">
+      </div>
+  	</body>
 </html>
