--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -1,22 +1,56 @@
-{% load i18n %}
-{% load staticfiles %}
-
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="ie6"> <![endif]-->
-<!--[if IE 7]> <html class="ie7">  <![endif]-->
-<!--[if IE 8]> <html class="ie8">  <![endif]-->
-<!--[if IE 9]> <html class="ie9">  <![endif]-->
-<!--[if gt IE 9]><!-->
-<html> 
-<!--<![endif]-->
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="{% static 'css/src/reset.css' %}" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-      <div id="nsa_modal">
-        <img src="{% static 'campaigns/nsa/modal/modal.jpg' %}" border="0" class="">
-      </div>
-  	</body>
-</html>
+<!--[if lt IE 7]> <html class="no-js ie6" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>4th Amendment</title>
+  <style>
+    .main-section{font-family:Arial , Sans-Serif; color:#333333; margin-left: -8px; margin-top: -8px;}
+    .adv{width:439px; margin:0 auto; background:transparent url(http://dev.thinkoverit.com/demos/images/bg_section.png) left top repeat; position:relative;}
+    .adv-combine{padding:15px; text-align:center;clear:both;}
+    .adv-heading{font-size:17px; margin:0; padding:0; margin-bottom:15px; }
+    .adv-subscribe { display:inline-block;}
+    .adv-form{float:left; border:1px solid #d2d2d2; border-radius:5px; height:22px; box-shadow:inset 1px 1px 1px #d2d2d2}
+    .txt-email ,.btn-sign ,.btn-share{border:0 none; background:transparent; margin:0px; }
+    .txt-email {color:#ababab; font-size:14px; padding-left:10px;}
+    .btn-sign{cursor:pointer;background:transparent url(http://dev.thinkoverit.com/demos/images/bg_sign.png) left top repeat; color:#fff; padding:3px 20px; font-size:14px; border-top-right-radius:5px; border-bottom-right-radius:5px;text-transform:uppercase;}
+    .btn-share{background:transparent url(http://dev.thinkoverit.com/demos/images/bg_share.png) left top repeat;margin-left:10px; color:#fff; padding:3px 20px;font-size:14px;border-radius:5px;text-transform:uppercase; text-decoration:none; display:inline-block;}
+    .adv-footer{font-size:11px; background: url(http://dev.thinkoverit.com/demos/images/bg_amendment_fight.png) left center no-repeat; line-height:19px; display:inline-block; padding-left:25px;}
+    .adv-footer a{color:#53accb;}
+    .adv-details{position:relative;}
+    .adv-details img{vertical-align:middle;}
+    .adv-link {position:absolute; display:block;text-align:right; right:10px; top:-20px;}
+  </style>
+ </head>
+  <body>
+  <section class="main-section">
+  <div class="adv">
+    <div class="adv-combine">
+     <h1 class="adv-heading">This 4th of July, we stand by the 4th Amendment and against the U.S. government's unconstitutional surveillance of Internet users.
+     </h1>
+     <div class="adv-subscribe">
+      <form class="adv-form" method="POST" action="//nt.salsalabs.com/save" accept-charset="utf-8" target="_blank">
+        <input type="text" placeholder="Email" name="Email" class="txt-email" />
+        <input type="hidden" name="ip" id="signup_ip" value="">
+        <input type="hidden" name="object" value="supporter">
+        <input type="hidden" name="organization_KEY" value="-501">
+        <input type="hidden" name="user_agent" id="user_agent" value="">
+        <input type="hidden" name="redirect" value="http://internetdefenseleague.org/confirm"> 
+        <input type="submit" value="Sign" class="btn-sign"/>
+      </form>
+      <a href="http://CallForFreedom.org" target="_blank" class="btn-share"> Share</a>
+     </div>
+     <p class="adv-footer"><a href="#">Fight for the future</a>&nbsp;will contact you about related campaigns&nbsp;<a href="#">Privacy Policy</a></p>
+    </div>
+    <div class="adv-details">
+     <a href="http://RestoreTheFourth.net" target="_blank" class="adv-link"><img width="60" src="http://dev.thinkoverit.com/demos/images/rPaxDfi.png" alt="RestoreTheFourth"/></a>
+     <img src="http://dev.thinkoverit.com/demos/images/amendment.jpg" alt="The 4th Amendment"/>
+    </div>
+    
+    </div>
+   </section>
+  </body>
+ </html>
