--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
@@ -1,20 +1,32 @@
-{% load i18n %}
-{% load staticfiles %}
-
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="ie6"> <![endif]-->
-<!--[if IE 7]> <html class="ie7">  <![endif]-->
-<!--[if IE 8]> <html class="ie8">  <![endif]-->
-<!--[if IE 9]> <html class="ie9">  <![endif]-->
-<!--[if gt IE 9]><!-->
-<html> 
-<!--<![endif]-->
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="{% static 'css/src/reset.css' %}" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-      <img src="{% static 'campaigns/nsa/banner/banner.jpg' %}" border="0" class="">
-  	</body>
-</html>
+<!--[if lt IE 7]> <html class="no-js ie6" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+ <html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>Ad Banners</title>
+
+  <style>
+   *{padding:0; margin:0;}
+   .ad_banner_full{width:100%; min-height:128px; display:block; background:#120207 url(http://dev.thinkoverit.com/demos/bg-adbanner-fullwidth.png) 0 0 repeat-x; color:#fff; font-family:'Helvetica Neue',Arial,Sans-Serif; font-size:14px; line-height:1.5; text-decoration:none;}
+   .ad_banner_full .ad_bannerc{display:block; min-height:128px; background:transparent url(http://dev.thinkoverit.com/demos/ad-banner-lens.jpg) 10% 0 no-repeat; vertical-align:middle;}
+   .ad_banner_full .ad_title{display:inline-block; width:40%; padding:20px 5% 0 5%; font-size:24px; color:#fff; text-shadow:2px 2px 2px #000; vertical-align:middle;}
+   .ad_banner_full .ad_subtitle{display:inline-block; width:25%; padding-top:15px; color:#fff; text-shadow:1px 1px 1px #000; vertical-align:middle;}
+   .ad_banner_full .ad_button1, .ad_banner_full .ad_button2{display:inline-block; padding:0 20px; margin:30px 0 0 5px; line-height:45px; color:#fff; background-color:#358e00; font-weight:bold; font-size:18px; border-radius:3px; text-shadow:1px 1px 1px #194301; vertical-align:middle; white-space:nowrap;}
+   .ad_banner_full .ad_button2{background-color:#1194df; text-shadow:1px 1px 1px #024469;}
+   .ad_banner_full .ad_button1:hover{background-color:#4ed100} .ad_banner_full .ad_button2:hover{background-color:#33ccff;}
+  </style>
+ </head>
+ <body>
+  <a class="ad_banner_full" href="http://callforfreedom.org" href="_blank"> 
+   <span class="ad_bannerc"> 	
+    <strong class="ad_title">This 4th July, we stand for the 4th Amendment and against NSA spying.</strong>
+    <em class="ad_subtitle">The right of the people to be secure... against unreasonable searches and seizures, <strong>shall not be violeted</strong>.</em>
+    <small class="ad_button1">Sign</small> <small class="ad_button2">Share</small>
+   </span> 
+  </a>
+ </body>
+</html> 
